k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: astrapay
  labels:
    name: astrapay
    environment: development
